# pytest-amaranth-sim

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  README.rst  cliff.toml  conftest.py  pyproject.toml
.github/workflows/: main.yml
ci/: testpypi_version.py
docs/: conf.py  dev.md  index.md  index.rst  quickstart.md  todo.md  usage.md
examples/: test_inject.py  test_mul.py  test_multiclk.py
src/pytest_amaranth_sim/: __init__.py  _marker.py  plugin.py
tests/: conftest.py  test_amaranth_sim.py
