[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pytest-amaranth-sim"
description = "Fixture to automate running Amaranth simulations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "William D. Jones", email = "thor0505@comcast.net" },
]
maintainers = [
    { name = "William D. Jones", email = "thor0505@comcast.net" },
]
license = {file = "LICENSE.md"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pytest>=6.2.0",
    "amaranth @ git+https://github.com/amaranth-lang/amaranth",
]
dynamic = ["version"]

[tool.pytest.ini_options]
addopts="--ignore=examples"
pytester_example_dir = "examples"

[project.urls]
Repository = "https://github.com/cr1901/pytest-amaranth-sim"
[project.entry-points.pytest11]
amaranth-sim = "pytest_amaranth_sim.plugin"

[tool.pdm.version]
source = "scm"
write_to = "pytest_amaranth_sim/version.txt"

[tool.pdm.scripts]
test = { cmd = "pytest", help="run tests" }

[tool.pdm.dev-dependencies]
dev = [
    "pyvcd>=0.4.0",
]
